--- a/MyOnlineShop/Pages/Items.cshtml
+++ b/MyOnlineShop/Pages/Items.cshtml
@@ -36,7 +36,7 @@
             @foreach (var item in Model.Items)
             {
             <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="@item.Filepath@item.Filename" class="card-img-top" alt="...">
               <div class="card-body">
                 @* <h5 class="card-title"> *@
                         @if (HttpContext.Session.GetString("IsAdmin") == "True")
