--- a/MyOnlineShop/Pages/Index.cshtml
+++ b/MyOnlineShop/Pages/Index.cshtml
@@ -3,6 +3,12 @@
 @{
     ViewData["Title"] = "Home page";
 }
+@if (TempData["Message"] != null)
+{
+    <div class="alert alert-success" role="alert">
+        @Html.Raw(TempData["Message"])
+    </div>
+}
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
