--- a/MyOnlineShop/Pages/Shared/_Layout.cshtml
+++ b/MyOnlineShop/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        @if (!Context.Session.GetInt32("UserId").HasValue)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Registration">Registration</a>
+                            </li>
+                        }
                         @if (Context.Session.GetInt32("UserId").HasValue)
                         {
                             <li class="nav-item">
