--- a/MyOnlineShop/Pages/Shared/_Layout.cshtml
+++ b/MyOnlineShop/Pages/Shared/_Layout.cshtml
@@ -42,6 +42,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/MyOrders">My Orders</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Registration">Account</a>
+                            </li>
                             @if (Context.Session.GetString("IsAdmin") == "True")
                             {
                                 <li class="nav-item">
